# Udemy_CMake

02_Basic Project File Structure/: CMakeLists.txt
03_Intermediate Project File Structure/: CMakeLists.txt
04_Variables and Options/: Notes.txt
05_Configuration_File/: CMakeLists.txt  Notes.txt
05_Configuration_File/app/: main.c
05_Configuration_File/configuration/: CMakeLists.txt
05_Configuration_File/src/my_lib/: CMakeLists.txt  my_lib.h
06_Source_and_Headers/: CMakeLists.txt  Notes.txt
06_Source_and_Headers/app/: CMakeLists.txt
06_Source_and_Headers/configuration/: config.hpp.in
06_Source_and_Headers/src/my_lib/: CMakeLists.txt  my_lib.c
Basic Project File Structure/: main.c
CMake_CMD_Line_Args/: Notes.txt
Example1/: CMakeLists.txt
Intermediate Project File Structure/src/my_lib/: CMakeLists.txt
Variables and Options/: CMakeLists.txt
Variables and Options/src/my_lib/: CMakeLists.txt
